--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/net21cz/blog-frontend#readme",
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.47",
+    "@babel/preset-env": "^7.0.0-beta.47",
+    "babel-loader": "^8.0.0-beta.2",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
@@ -27,6 +30,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap-css-only": "^4.1.0",
+    "es6-promise": "^4.2.4",
     "vue": "^2.5.16"
   }
 }
