--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.18.0",
     "bootstrap-css-only": "^4.1.0",
     "es6-promise": "^4.2.4",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vuex": "^3.0.1"
   }
 }
